Add "c" command for copying the hits buffer.

--- a/README.org
+++ b/README.org
@@ -72,6 +72,12 @@ to follow links.  A few extra commands are also available:
          window (but see [[Caveats]] below).
   - g :: Save all modified files to disk, then refresh the search hit
          buffer from the actual contents of the disk files.
+  - c :: Copy the =*Org grep*= buffer into another Emacs buffer whose
+         name depends on the regular expression.  This effectively
+         saves the buffer contents before starting a new search.  The
+         saved copy is a regular Org file with no specially added
+         command.  Also, for convenience, all list items are turned
+         into checklist items.
   - q :: Quit the =*Org grep*= window, deleting it.
 
 In all Org buffers, command *C-x `* uses the contents of an existing
