--- a/README.org
+++ b/README.org
@@ -35,9 +35,11 @@ for altering its behavior.  These variables are:
        by the Org standard *org-directory* variable.
   - org-grep-ellipsis :: This string is used to mark, in the hits
        buffer, context fragments which have been deleted.  The default
-       is =[...]=.  Do not customize it with a string which likely
-       appears frequently in your original text: all occurrences will
-       be highlighted regardless if the ellipsis was real or not,
+       is an Unicode ellipsis with a space on each side ( … ).  You
+       might want to change this if your computer setup does not
+       support Unicode yet.  However, do not customize it with a
+       string which appears frequently in your files: all occurrences
+       will be highlighted regardless if the ellipsis was real or not,
        making the result more difficult to correctly interpret.
   - org-grep-maximum-context-size :: Some matched lines may be long
        enough to be seen as bringing pollution in the hits buffer,
